# telecommunication

./: CMakeLists.txt  hamming.csv  lab1.cpp  lab2.cpp  lab3.cpp  lab4.cpp  rate12.csv  updated_new_results.csv
Lab1/: CMakeLists.txt  bits.cpp  bits.hpp  brute.cpp  hamming.cpp  hamming.hpp  main.cpp  mr.cpp  mr.hpp  student.cpp  student.hpp
data/: hamming.csv  lab3_graph.csv  lab3_results.csv  lab4_graph.csv  lab4_graph_mr.csv  lab4_results.csv  rate12.csv  rate13.csv  rate37.csv
report/: plot.py  plot2.py  plot3.py  plot4.py  plot5.py
src/: bits.cpp  bits.hpp  bpsk.cpp  bpsk.hpp  hamming.hpp  ldpc.cpp  ldpc.hpp  main.cpp  mr.hpp
